@@ -21,7 +21,7 @@ package org.apache.solr.search;
  **/
 public class FieldParams {
   private final int wordGrams;  // make bigrams if 2, trigrams if 3, or all if 0
-  private final int slop;  // null defaults to ps parameter
+  private final int slop;
   private final float boost;
   private final String field;
   public FieldParams(String field, int wordGrams, int slop, float boost) {
