@@ -366,6 +366,8 @@ New Features
   to schema.xml's <copyField/> declaration but as an update processor that can 
   be combined with other processors in any order. (Jan Høydahl & hossman)
 
+* SOLR-3351: eDismax: ps2 and ps3 params (janhoy)
+
 * SOLR-3542: Add WeightedFragListBuilder for FVH and set it to default fragListBuilder
   in example solrconfig.xml. (Sebastian Lutze, koji)
 
